--- a/src/pages/Home/SCSS/WhoWeHelp.scss
+++ b/src/pages/Home/SCSS/WhoWeHelp.scss
@@ -1,4 +1,3 @@
-// @import "../../../SCSS/reset.scss";
 @import "../../../SCSS/variables.scss";
 @import "../../../SCSS/mixins.scss";
 
@@ -6,8 +5,8 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: $font-base;
 }
+
 .who-background {
   width: 100%;
   height: 40rem;
@@ -32,6 +31,8 @@
     margin-bottom: 3rem;
   }
   .who-text_paragraph {
+    display: flex;
+    text-align: center;
     font-size: 0.9rem;
     font-weight: 300;
     line-height: 1.4rem;
@@ -228,4 +229,3 @@
     }
   }
 }
-
